Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8285792

Posix signal handler modification checking issues.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • 20
    • 19
    • hotspot
    • b08

      There are a few issues with the signal handler modification check in src/hotspot/os/posix/signals_posix.cpp:

      The periodic warning triggers when crash_handler is the handler: should be ignored, as it is in PosixSignals::print_signal_handler().

      check_signal_handler(int) prints ALL signal handlers when it finds one that is modified. When multiple changes are detected, this is very noisy.

      Code duplication/inconsistency. Noted in PR for JDK-8283337, different code uses different guards for checking for changes handlers.

            hseigel Harold Seigel (Inactive)
            kevinw Kevin Walls
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: