8285792: Posix signal handler modification checking issues.